# bgpkit-broker-backend

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  README.org  example-collector-config.json  full-config.json  install.sh
api/: api.py  models.py  requirements.txt
deployment/: Dockerfile  Dockerfile.api  Dockerfile.postgres  Dockerfile.updater  README.md  api-service-freebsd.conf  db_cred.env  dbinit.sh  docker-compose.yml  fly.toml  full-config.json  start_api.sh  start_updater.sh  update.cron  update.sh
migrations/2021-10-09-025319_billboard/: up.sql
migrations/2021-10-09-025319_broker/: down.sql
migrations/2022-04-13-040151_broker/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  kafka.rs  lib.rs  models.rs
src/db/: kafka.rs  mod.rs  models.rs  schema.rs  sqlite.rs
src/scrapers/: mod.rs  riperis.rs  routeviews.rs  utils.rs
