[package]
name = "bgpkit-broker-backend"
version = "0.3.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2018"

[[bin]]
name = "bgpkit-broker-updater"
path = "src/bin/updater.rs"

[dependencies]

reqwest = {version="0.11", features=["blocking"]}
regex="1"
chrono="0.4"
env_logger="0.9"
log="0.4.14"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.0"
scraper="0.12.0"

# cli dependency
clap = {version = "3.1", features=["derive"]}

# json feature dependency
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}

futures = "0.3.21"

# database dependency
dotenv = "0.15.0"

# sqlite
rusqlite = { version = "0.27.0", features = ["bundled"] }
