[package]
name = "bgpkit-broker-backend"
version = "0.4.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2018"

[[bin]]
name = "bgpkit-broker-updater"
path = "src/bin/updater/files.rs"

[dependencies]

reqwest = {version="0.11", features=["blocking"]}
regex="1"
chrono="0.4"
env_logger="0.9"
log="0.4.14"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.0"
scraper="0.12.0"

# cli dependency
clap = {version = "3.2", features = ["derive"]}
indicatif = "0.15"

# json feature dependency
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}

futures = "0.3.21"

# database dependency
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
url="2.2.2"

dotenv = "0.15.0"

rdkafka = {version = "0.28.0", optional=true}

[features]
# default=[]
kafka = ["rdkafka"]
